--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
 
 
 dev_dependencies:
-  googleapis_auth: ^1.1.0
-  pedantic: ^1.9.0
   test: ^1.17.5
+  googleapis_auth: ^1.1.0
+  dotenv: ^3.0.0
+  pedantic: ^1.9.0
 
